Avoid the menu to overflow below the header
Remove margin-right on brand logo link

--- a/_sass/materialize-custom.scss
+++ b/_sass/materialize-custom.scss
@@ -30,7 +30,6 @@ nav {
   .brand-logo {
     position: relative;
     height: 100%;
-    margin-right: 1.5em;
 
     img {
       height: 100%;
